click to chat edit

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </ul>
             <div>
                 <a href="#pricing" class="btn btn-primary">💃 Book Your Trial</a>
-                <a href="https://wa.me/8076122050" class="btn btn-secondary" target="_blank">💬 Enquiry on WhatsApp</a>
+                <a href="https://wa.me/+918076122050" class="btn btn-secondary" target="_blank">💬 Enquiry on WhatsApp</a>
             </div>
         </div>
     </section>
@@ -220,7 +220,7 @@
                     <h2>Make Your Wedding Dance Unforgettable</h2>
             <p>In just 1–3 sessions, you'll be performance-ready with confidence and charm.</p>
             <div>
-                <a href="https://wa.me/8076122050" class="btn btn-secondary">💬 Message on WhatsApp</a>
+                <a href="https://wa.me/+918076122050" class="btn btn-secondary">💬 Message on WhatsApp</a>
                 <a href="tel:+918076122050" class="btn btn-primary">📞 Call To Coach</a>
             </div>
             <div class="urgency-text">
@@ -231,7 +231,7 @@
     
     <!-- Fixed Buttons -->
     <div class="fixed-buttons">
-        <a href="https://wa.me/8076122050" class="fixed-btn whatsapp-btn" target="_blank" title="Chat on WhatsApp">
+        <a href="https://wa.me/+918076122050" class="fixed-btn whatsapp-btn" target="_blank" title="Chat on WhatsApp">
             <i class="fab fa-whatsapp"></i>
         </a>
         <a href="tel:+918076122050" class="fixed-btn phone-btn" title="Call Now">
