--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     
     <!-- Hero Section -->
     <section class="hero">
-        <div class="logo">
-            <img src="assets/logo.png" alt="company logo">
+        <div class="logocontainer">
+            <img src="assets/logo.png" alt="company logo" class="logo">
         </div>
         <div class="hero-content">
             <h1>Shaadi Ka Dance Banayein Perfect <b>– 1-on-1 Online Practice</b>, Ghar Baithe! </h1>
